<resources>
    <string name="app_name">Fast Food</string>
    <string name="title_activity_menu_princial">MenuPrincialActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_new_header_title">Fast Food</string>
    <string name="nav_header_subtitle">Bienvenido</string>
    <string name="nav_header_new_subtitle">Necesita iniciar sesion</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="iniciar">Iniciar</string>
    <string name="menu_home">Inicio</string>
    <string name="mis_favoritos">Mis Favoritos</string>
    <string name="menu_registrar">Registrar Productos</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_custom">Custom</string>
    <string name="iniciar_Sesion">Registrarse</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="btnInicioSesion">INICIAR</string>
    <string name="ingresarEmailInicio">Email</string>
    <string name="ingresarContrasenaInicio">Contraseña</string>
    <string name="btn_aun_no_registrado">¿Aun no estas registrado? Crea una cuenta?</string>
    <!--registrar producto-->

    <string name="btn_Registrar_Producto">Registrar Producto</string>
    <string name="btn_Registrar_Producto_Activity">Registrar</string>
    <!--visualizar producto-->

    <string name="tv1">PrimerActivity</string>
    <string name="tv2">SegundoActivity</string>
    <string name="menu_catalogo">Platillos</string>
    <string name="iniciarSesion">Iniciar Sesion</string>
    <string name="title_activity_intento_menu">IntentoMenu</string>
    <string name="title_activity_intento3">intento3</string>

</resources>