<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myapplication.ui.gallery.GalleryFragment"
        android:label="@string/mis_favoritos"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_registrar"
        tools:layout="@layout/fragment_slideshow" />
    <activity
        android:id="@+id/nav_logout"
        android:name="com.example.myapplication.MainActivity"
        android:label="@string/menu_logout"
        tools:layout="@layout/activity_main" />
    <activity
        android:id="@+id/nav_catalog"
        android:name="com.example.myapplication.ViewActivity"
        android:label="@string/menu_custom"
        tools:layout="@layout/activity_iniciar2" />
    <activity
        android:id="@+id/nav_custom"

        android:name="com.example.myapplication.ui.custom.Registrarse"
        android:label="@string/menu_catalogo"
        tools:layout="@layout/activity_registrarse" />
    <activity
        android:id="@+id/nav_iniciosesion"
        android:name="com.example.myapplication.INICIARSESION"
        android:label="@string/iniciarSesion"
        tools:layout="@layout/activity_iniciarsesion" />
</navigation>